--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -2,10 +2,21 @@
 <html>
   <head>
     <title>EcoFind</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="popup.js"></script>
   </head>
-  <body>
+  <body class="backgroundimage">
     <h1>EcoFind</h1>
-    <button id="alternate">Find Alternate Items</button>
+    <h2>Find sustainable alternative items here!</h2>
+    <!-- <button id="alternate">Find Alternate Items</button> -->
+    <div class="column">
+      <h3> item 1 </h3>
+    </div>
+    <div class="column">
+      <h3> item 2 </Text>
+    </div>
+    <div class="column">
+      <h3> item 3 </h3>
+    </div>
   </body>
 </html>
