html get request from search engine

--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -8,8 +8,10 @@
   <body class="backgroundimage">
     <h1>EcoFind</h1>
     <h2>Find sustainable alternative items here!</h2>
+    <div id="content"></div>
+    <script src=></script>
     <!-- <button id="alternate">Find Alternate Items</button> -->
-    <div class="column">
+    <!-- <div class="column">
       <h3> item 1 </h3>
     </div>
     <div class="column">
@@ -17,6 +19,6 @@
     </div>
     <div class="column">
       <h3> item 3 </h3>
-    </div>
+    </div> -->
   </body>
 </html>
