select for title, image, and link of recommended products

--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -8,17 +8,17 @@
   <body class="backgroundimage">
     <h1>EcoFind</h1>
     <h2>Find sustainable alternative items here!</h2>
-    <div id="content"></div>
-    <script src=></script>
+    <h3 id="productName"></h3>
+    <!-- <div id="content"></div> -->
     <!-- <button id="alternate">Find Alternate Items</button> -->
-    <!-- <div class="column">
-      <h3> item 1 </h3>
+    <div class="column" id="col1">
+      <h4> item 1 </h4>
     </div>
-    <div class="column">
-      <h3> item 2 </Text>
+    <div class="column" id="col2">
+      <h4> item 2 </h4>
     </div>
-    <div class="column">
-      <h3> item 3 </h3>
-    </div> -->
+    <div class="column" id="col3">
+      <h4> item 3 </h4>
+    </div>
   </body>
 </html>
