updated info for alternate products

--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -9,7 +9,7 @@
     <h1>EcoFind</h1>
     <h2>Find sustainable alternative items here!</h2>
     <h3 id="productName"></h3>
-    <!-- <div id="content"></div> -->
+    <div id="content"></div>
     <!-- <button id="alternate">Find Alternate Items</button> -->
     <div class="column" id="col1">
       <h4> item 1 </h4>
