worked on display of alternate products

--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -12,13 +12,19 @@
     <div id="content"></div>
     <!-- <button id="alternate">Find Alternate Items</button> -->
     <div class="column" id="col1">
-      <h4> item 1 </h4>
+      <!-- <h4 id="col1title"></h4>
+      <div id="col1image"></div>
+      <a href="www.google.com" id="col1link">Click here!</a> -->
     </div>
     <div class="column" id="col2">
-      <h4> item 2 </h4>
+      <!-- <h4 id="col2title"></h4>
+      <div id="col2image"></div>
+      <a href="www.google.com" id="col2link">Click here!</a> -->
     </div>
     <div class="column" id="col3">
-      <h4> item 3 </h4>
+      <!-- <h4 id="col3title"></h4>
+      <div id="col2image"></div>
+      <a href="www.google.com" id="col3link">Click here!</a> -->
     </div>
   </body>
 </html>
