tried to get goodonyou link based on company, failed

--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -4,6 +4,8 @@
     <title>EcoFind</title>
     <link rel="stylesheet" href="styles.css">
     <script src="popup.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
   </head>
   <body class="backgroundimage">
     <h1>EcoFind</h1>
@@ -19,6 +21,9 @@
     </div>
     <div class="column" id="col3">
       <h4> item 3 </h4>
+    </div>
+    <div id="link">
+      <h4> Link </h4>
     </div>
   </body>
 </html>
