--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -4,8 +4,8 @@
     <title>EcoFind</title>
     <link rel="stylesheet" href="styles.css">
     <script src="popup.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
+    <script src="jquery/jquery-3.5.1.min.js"></script>
+    <script src="jquery-csv/src/jquery.csv.min.js"></script>
   </head>
   <body class="backgroundimage">
     <h1>EcoFind</h1>
