--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -9,8 +9,11 @@
   </head>
   <body class="backgroundimage">
     <h1>EcoFind</h1>
-    <h2>Find sustainable alternative items here!</h2>
-    <div id="rating"><h3>Brand rating: </h3></div>
+    <!-- <h2>Find sustainable alternative items here!</h2> -->
+    <div id="rating">
+      <h3 id="ratingFont"> sustainability brand rating </h3>
+      <h2> Here are some sustainable alternatives!</h2>
+    </div>
     <h3 id="productName"></h3>
     <div id="content"></div>
 
@@ -32,8 +35,8 @@
       <div class="img" id="img3"></div>
       <div class="row" id="info3"></div>
     </div>
-    <div id="link">
+    <!-- <div id="link">
       <h4> Link </h4>
-    </div>
+    </div> -->
   </body>
 </html>
