--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -20,17 +20,23 @@
 
     <div class="product">
       <div class="img" id="img1"></div>
-      <div class="row" id="info1"></div>
+      <div class="row">
+        <a id="info1"></a>
+      </div>
     </div>
 
     <div class="product">
       <div class="img" id="img2"></div>
-      <div class="row" id="info2"></div>
+      <div class="row">
+        <a id="info2"></a>
+      </div>
     </div>
 
     <div class="product">
       <div class="img" id="img3"></div>
-      <div class="row" id="info3"></div>
+      <div class="row">
+        <a id="info3"></a>
+      </div>
     </div>
     <div id="link">
       <h4> Link </h4>
