edited sustainability rating

--- a/EcoFind/popup.html
+++ b/EcoFind/popup.html
@@ -11,8 +11,8 @@
     <h1>EcoFind</h1>
     <!-- <h2>Find sustainable alternative items here!</h2> -->
     <div id="rating">
-      <h3 id="ratingFont"> sustainability brand rating </h3>
-      <h2> Here are some sustainable alternatives!</h2>
+      <h3 id="ratingFont"> Good On You Sustainability Rating: </h3>
+      <h2> Here are some more sustainable alternatives!</h2>
     </div>
     <h3 id="productName"></h3>
     <div id="content"></div>
